--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,28 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.3.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+        	<mainClass>fourchangrabber.GrabberClient</mainClass>
+<!-- 			optional -->
+<!--           <workingDirectory>/tmp</workingDirectory> -->
+<!--           <arguments> -->
+<!--             <argument>-X</argument> -->
+<!--             <argument>myproject:dist</argument> -->
+<!--           </arguments> -->
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -26,6 +48,11 @@
   		<groupId>com.googlecode.lanterna</groupId>
   		<artifactId>lanterna</artifactId>
   		<version>2.1.9</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>commons-cli</groupId>
+  		<artifactId>commons-cli</artifactId>
+  		<version>1.2</version>
   	</dependency>
   </dependencies>
 </project>
